--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,15 +1,16 @@
 name: Deploy to staging
 on:
   push:
-    banches:
+    branches:
       - main
 
 jobs:
   deploy_everything:
-    name: Deplying everything to staging
-    steps:
-      - name: SSH into server
-      - run: |
+  runs-on: ubuntu-latest
+  name: Deplying everything to staging
+  steps:
+    - name: SSH into server
+      run: |
           echo ${{secrets.SSH_PRIVATE_KEY}} &> ~/ssh_key
           ssh -i ~/ssh_key ubuntu@13.200.235.144
           cd week-25-ci-cd
