--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,8 @@ jobs:
       - name: SSH into server
         run: |
           echo "${{secrets.SSH_PRIVATE_KEY}}" &> ~/ssh_key
-          echo "${{secrets.KNOWN_HOST}}" &> ~/.ssh/known_hosts
+          mkdir /home/runner/.ssh/known_hosts
+          echo "${{secrets.KNOWN_HOST}}" &> /home/runner/.ssh/known_hosts
           ssh -i ~/ssh_key ubuntu@65.0.138.93
           cd week-25-ci-cd
           pnpm install
