--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,9 +14,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
         
       - name: Run Build
-        run: npm run build
+        run: pnpm run build
