--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,12 +13,15 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '24'
       - name: Install pnpm
         run: npm install -g pnpm
 
       - name: Install Dependencies
         run: pnpm install
-        
+      
+      - name: Generate prisma client
+        run: pnpm prisma generate 
+
       - name: Run Build
         run: pnpm run build
