--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,27 +1,25 @@
-name: Build on PR
-
+name: Deploy to staging
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  build:
+  deploy_everything:
     runs-on: ubuntu-latest
+    name: Deplying everything to staging
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '24'
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Install Dependencies
-        run: pnpm install
-      
-      - name: Generate prisma client
-        run: pnpm prisma generate 
-
-      - name: Run Build
-        run: pnpm run build
+      - name: SSH into server
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+          chmod 600 ~/ssh_key
+          mkdir -p ~/.ssh
+          echo "${{ secrets.KNOWN_HOST }}" > ~/.ssh/known_hosts
+          ssh -i ~/ssh_key ubuntu@65.0.138.93 << 'EOF'
+          set -e
+          export PATH="$PATH:/home/ubuntu/.nvm/versions/node/v24.11.0/bin"
+          cd week-25-ci-cd
+          git pull origin main
+          pnpm install
+          pnpm run build
+          pm2 restart all
+          EOF
